fixing accessibility and layout issues

--- a/src/components/HomeMain.css
+++ b/src/components/HomeMain.css
@@ -1,5 +1,16 @@
+@media (min-width: 600px) {
+    .home-main {
+        height: 304.95vh;
+    }
+}
+
+@media (max-width: 599px) {
+    .home-main {
+        height: 105vh;
+    }
+}
+
 .home-main {
-    height: 304.95vh;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -215,7 +226,7 @@ h5 {
 .home-highlights > button {
     flex-shrink: 0;
     flex-basis: 20%;
-    margin-top: 4vw;
+    margin-top: 2vw;
     margin-bottom: 4vw;
 }
 
